# divine-sky

./: .coverage-thresholds.json  .gitignore  AGENTS.md  Cargo.toml  Dockerfile.atbridge  Dockerfile.feedgen  Dockerfile.handle-gateway  Dockerfile.labeler  README.md  divine-sky-technical-spec.md  pompt_plan.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: rust.yml
apps/divine-blacksky-viewer/: index.html  package-lock.json  package.json  vite.config.ts
apps/divine-blacksky-viewer/src/: App.tsx  api.ts  playback.test.ts  playback.ts  styles.css
config/: docker-compose.yml  minio-init.sh
config/mock-blossom/: README.md  server.py
config/mock-relay/: server.py
crates/divine-appview/: Cargo.toml
crates/divine-appview-indexer/: Cargo.toml
crates/divine-appview-indexer/src/: config.rs  lib.rs  main.rs  pds_client.rs  relay.rs  store.rs  sync.rs
crates/divine-appview-indexer/tests/: backfill.rs  relay_refresh.rs
crates/divine-appview/src/: config.rs  lib.rs  main.rs  root_page.html  store.rs  views.rs
crates/divine-appview/src/routes/: actor.rs  feed.rs  health.rs  mod.rs  root.rs  search.rs
crates/divine-appview/tests/: actor.rs  feed.rs  root.rs  search.rs
crates/divine-atbridge/: Cargo.toml
crates/divine-atbridge/src/: backfill_planner.rs  config.rs  deletion.rs  funnelcake_rest.rs  health.rs  legacy_repair.rs  lib.rs  main.rs  nostr_consumer.rs  pds_accounts.rs  pds_host_backfill.rs  pipeline.rs  plc_directory.rs  profile_sync.rs  provision_runtime.rs  provisioner.rs  publisher.rs  runtime.rs  signature.rs  text_builder.rs  tid.rs  translator.rs  video_service.rs
crates/divine-atbridge/tests/: appview_lab_contract.rs  backfill_planner.rs  bridge_opt_in_gate.rs  e2e_local_stack.rs  legacy_badjwt_repair.rs  localnet_contract.rs  media_lineage.rs  pds_host_backfill.rs  post_record_contract.rs  profile_record_contract.rs  provision_api.rs  provisioning_key_store.rs  provisioning_lifecycle.rs  publish_path_integration.rs  publish_queue_scheduler.rs  replay_and_delete.rs  runtime_health.rs  runtime_resilience.rs
crates/divine-bridge-db/: Cargo.toml
crates/divine-bridge-db/src/: lib.rs  migrations.rs  models.rs  pool.rs  queries.rs  schema.rs
crates/divine-bridge-types/: Cargo.toml
crates/divine-bridge-types/src/: atproto_labels.rs  lib.rs
crates/divine-feedgen/: Cargo.toml
crates/divine-feedgen/src/: lib.rs  main.rs  root_page.html  skeleton.rs
crates/divine-feedgen/tests/: feed_skeleton.rs
crates/divine-handle-gateway/: Cargo.toml
crates/divine-handle-gateway/src/: keycast_client.rs  lib.rs  main.rs  name_server_client.rs  provision_runner.rs  store.rs
crates/divine-handle-gateway/src/routes/: disable.rs  enable.rs  export.rs  mod.rs  opt_in.rs  provision.rs  status.rs  well_known.rs
crates/divine-handle-gateway/tests/: control_plane.rs  provision_flow.rs
crates/divine-labeler/: Cargo.toml
crates/divine-labeler/src/: config.rs  lib.rs  main.rs  root_page.html  signing.rs  store.rs
crates/divine-labeler/src/routes/: mod.rs  query_labels.rs  webhook.rs
crates/divine-labeler/tests/: health.rs  query_labels.rs  webhook.rs
crates/divine-localnet-admin/: Cargo.toml
crates/divine-localnet-admin/src/: lib.rs  main.rs
crates/divine-localnet-admin/tests/: handle_records.rs
crates/divine-moderation-adapter/: Cargo.toml
crates/divine-moderation-adapter/src/: labels.rs  main.rs
crates/divine-moderation-adapter/src/labels/: inbound.rs  labeler_service.rs  mod.rs  outbound.rs  vocabulary.rs
crates/divine-moderation-adapter/tests/: inbound.rs  integration_flow.rs  label_mapping.rs  labeler_service.rs  outbound.rs
crates/divine-video-worker/: Cargo.toml
crates/divine-video-worker/src/: blob_upload.rs  blossom.rs  cid.rs  derivatives.rs  lib.rs  main.rs  normalize.rs  profile_image.rs
crates/divine-video-worker/tests/: derivatives.rs  normalize.rs
deploy/appview-lab/: README.md  docker-compose.yml  env.example  media_view_server.py  mock_pds.py
deploy/localnet/: README.md  bridge.env.example  handle-gateway.env.example
deploy/localnet/dns/: Corefile.example  README.md  docker-compose.yml  nginx.conf
deploy/localnet/jetstream/: README.md  docker-compose.yml  env.example  nginx.conf
deploy/localnet/pds/: README.md  docker-compose.yml  env.example  nginx.conf
deploy/localnet/plc/: README.md  docker-compose.yml  init.sql  nginx.conf
deploy/pds/: README.md  docker-compose.yml  env.example
docs/plans/: 2026-03-20-divine-atproto-unified-plan.md
docs/research/: 2026-03-20-divine-atproto-architecture-diagram.md  2026-03-20-divine-atproto-product-plan.md  2026-03-20-divine-atproto-technical-spec.md
docs/runbooks/: 2026-06-05-atproto-prod-promotion.md  atproto-auth-server-smoke-test.md  atproto-identity-key-custody.md  atproto-opt-in-smoke-test.md  bluesky-crosspost-launch-blockers.md  deploy-atbridge-plc-fix.md  dev-bootstrap.md  divine-atproto-login-canary.md  divine-sky-staging-status.md  launch-checklist.md  localnet-lab.md  localnet-provisioning-smoke-test.md  login-divine-video.md  media-path.md  pds-operations.md  rsky-pds-issues.md  source-of-truth.md  staging-pds-did-resolution.md  staging-production-deploy.md
migrations/001_bridge_tables/: down.sql  up.sql
migrations/002_label_tracking/: down.sql  up.sql
migrations/003_appview_read_model/: down.sql  up.sql
migrations/004_provisioning_keys/: down.sql  up.sql
migrations/004_publish_job_scheduler/: down.sql  up.sql
migrations/005_crosspost_default_true/: down.sql  up.sql
migrations/006_account_pds_session/: down.sql  up.sql
migrations/007_operator_actions/: down.sql  up.sql
migrations/008_publish_job_reserved_rkey/: down.sql  up.sql
scripts/: appview-lab-down.sh  appview-lab-smoke.sh  appview-lab-up.sh  bridge-user-to-bsky.sh  check-coverage-thresholds.sh  create-labeler-did.sh  localnet-down.sh  localnet-smoke.sh  localnet-up.sh  post-vine-to-pds.sh  smoke-divine-atproto-login.sh  staging-pds-did-smoke.sh  test-workspace.sh
scripts/tests/: check-coverage-thresholds.sh
(+67 files in other folders)
