[workspace]
members = [
    "crates/divine-atbridge",
    "crates/divine-bridge-db",
    "crates/divine-bridge-types",
    "crates/divine-video-worker",
]
resolver = "2"

[workspace.dependencies]
diesel = { version = "2.2", features = ["postgres", "chrono"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
