[workspace]
members = [
    "crates/divine-atbridge",
    "crates/divine-appview",
    "crates/divine-appview-indexer",
    "crates/divine-bridge-db",
    "crates/divine-bridge-types",
    "crates/divine-feedgen",
    "crates/divine-handle-gateway",
    "crates/divine-labeler",
    "crates/divine-localnet-admin",
    "crates/divine-moderation-adapter",
    "crates/divine-video-worker",
]
resolver = "2"

[workspace.dependencies]
diesel = { version = "2.2", features = ["postgres", "chrono"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }

[workspace.metadata]
bootstrap = "bash scripts/test-workspace.sh"
libpq_macos = "brew install libpq"
libpq_linux = "sudo apt-get install -y libpq-dev pkg-config"
