[package]
name = "divine-appview-indexer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "divine-appview-indexer"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1"
chrono = { workspace = true }
diesel = { workspace = true }
divine-bridge-db = { path = "../divine-bridge-db" }
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
