[package]
name = "divine-appview"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "divine-appview"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1"
axum = "0.7"
chrono = { workspace = true }
diesel = { workspace = true }
divine-bridge-db = { path = "../divine-bridge-db" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower-http = { version = "0.6", features = ["cors"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = "2"

[dev-dependencies]
tokio = { workspace = true }
tower = { version = "0.5", features = ["util"] }
