[package]
name = "divine-atbridge"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "divine-atbridge"
path = "src/main.rs"

[dependencies]
divine-bridge-db = { path = "../divine-bridge-db" }
divine-bridge-types = { path = "../divine-bridge-types" }
divine-video-worker = { path = "../divine-video-worker" }
anyhow = { workspace = true }
aes-gcm = "0.10"
axum = "0.7"
diesel = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
secp256k1 = { version = "0.29", features = ["global-context", "hashes", "rand-std"] }
sha2 = "0.10"
hex = "0.4"
unicode-segmentation = "1.11"
chrono = { workspace = true }
data-encoding = "2.6"
bs58 = "0.5"
serde_ipld_dagcbor = "0.6"
async-trait = "0.1"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
futures-util = "0.3"
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-webpki-roots"] }

[dev-dependencies]
secp256k1 = { version = "0.29", features = ["global-context", "hashes", "rand-std"] }
tokio = { version = "1", features = ["full", "test-util"] }
mockito = "1"
tower = { version = "0.5", features = ["util"] }
