[package]
name = "divine-feedgen"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "divine-feedgen"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
axum = "0.7"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
