[package]
name = "divine-feedgen"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "divine-feedgen"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1"
axum = "0.7"
diesel = { workspace = true }
divine-bridge-db = { path = "../divine-bridge-db" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower-http = { version = "0.6", features = ["cors"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
