[package]
name = "divine-handle-gateway"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "divine-handle-gateway"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
axum = { version = "0.7", features = ["macros", "json"] }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
