[package]
name = "divine-moderation-adapter"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "divine-moderation-adapter"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
