[package]
name = "divine-video-worker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "divine-video-worker"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1"
cid = "0.11"
chrono = { workspace = true }
diesel = { workspace = true }
divine-bridge-db = { path = "../divine-bridge-db" }
hex = "0.4"
multihash = "0.19"
multihash-codetable = { version = "0.1", features = ["sha2"] }
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
sha2 = "0.10"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
mockito = "1"
tokio = { workspace = true }
